--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ a:hover {
 }
 
 body {
-  background-image: url(src/image.jpg);
+  background-image: url(./src/image.jpg);
   position: absolute;
 
   margin: 0;
